<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_0"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
        app:layout_constraintStart_toEndOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_1"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_2"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonOne"
        app:layout_constraintStart_toEndOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_3"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonTwo"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_4"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_5"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonFour"
        app:layout_constraintStart_toEndOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_6"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonFive"
        app:layout_constraintStart_toEndOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_7"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_8"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSeven"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/_9"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEight"
        app:layout_constraintStart_toEndOf="@+id/buttonEight" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/dot"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/buttonOne"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/equals"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonZero"
        app:layout_constraintStart_toEndOf="@+id/buttonZero" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/addition"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintStart_toEndOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/subtraction"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonThree"
        app:layout_constraintStart_toEndOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/multiply"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/buttonSix"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/divide"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonNine"
        app:layout_constraintStart_toEndOf="@+id/buttonNine" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/clear"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/buttonNeg"
        app:layout_constraintTop_toBottomOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/buttonParen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/parenthesis"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/buttonDot"
        app:layout_constraintTop_toBottomOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonNeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorButtonGray"
        android:text="@string/button_neg"
        android:textColor="#5C5B5B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonParen"
        app:layout_constraintStart_toEndOf="@+id/buttonParen" />

    <EditText
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="right"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="result" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="288dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="true"
        android:gravity="right"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/operation"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:text="newNumber" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="="
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/newNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

</androidx.constraintlayout.widget.ConstraintLayout>